# finder

./: .gitignore  README.md  ToDo.md
finder-gtk/: .gitignore  Cargo.toml  build.rs
finder-gtk/res/: main-window.glade  main_window.glade  resources.gresource  resources.xml
finder-gtk/src/: app.rs  main.rs  static_resources.rs
finder_api/: Cargo.toml
finder_api/src/: lib.rs
finder_api/src/backend/: mod.rs  types.rs
