[package]
authors = ["Johan <johan.tillmar@gmail.com>"]
build = "build.rs"
name = "finder-gtk"
version = "0.1.0"
workspace = "../"

[dependencies]
gdk = "^0.8.0"
glib = "0.5.0"
gio = "0.4.0"

[dependencies.finder_api]
path = "../finder_api"

[dependencies.gtk]
features = ["v3_22"]
version = "^0.4.0"
